--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,3 @@
-#!/usr/bin/dh-exec
-
-wgnetns/main.py => /usr/bin/wg-netns
-extras/wg-netns@.service => /lib/systemd/system/wg-netns@.service
-extras/wg-netns.target => /lib/systemd/system/wg-netns.target
+wg-netns usr/bin
+systemd/wg-netns@.service lib/systemd/system
+systemd/wg-netns.target lib/systemd/system
